# Vidlens_AI

./: .gitignore  README.md  VidLens_AI.ipynb  app.py  pyproject.toml  requirements.txt
src/video_understanding/: video_understanding.py
vidlens/: vidlens.py
