[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "VIDLENS_AI"
version = "0.1.0"
authors = [
  { name="Harshit Jhamb", email="harshitjhamb03@gmail.com" },
]
description = "Understand and describe your videos with SmolVLM2, Whisper and Qwen. Fully local."
dependencies = [
    "transformers>=4.56.2",
    "accelerate>=1.10.1",
    "num2words>=0.5.14",
    "av>=15.1.0",
    "torchcodec>=0.7.0",
    "pillow>=11.3.0",
    "openai-whisper>=20250625",
    "torchvision>=0.23.0",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
